fix overflow-wrap on tweets

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -1,6 +1,7 @@
 
 * {
   box-sizing: border-box;
+  overflow-wrap: break-word;
 }
 *,
 *:before,
@@ -31,6 +32,7 @@ body {
   color: #545149;
   background-color: #f4f1ec;
   font-size: 24px;
+  overflow-wrap: break-word;
 }
 
 #myBtn {
